# SmartHomeESPIDF

./: CMakeLists.txt
html/: web.html
main/: CMakeLists.txt  app_http_server.c  app_http_server.h  component.mk  gpio.c  gpio.h  i2c_lcd.c  i2c_lcd.h  main.c  main.h
